--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,10 @@
       content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
     />
     <meta property="og:site_name" content="Treact" />
-    <meta property="og:title" content="Free Modern React Templates and Components for Building Landing Pages" />
+    <meta property="og:title" content="Innovative Colors Studio" />
     <meta
       property="og:description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="Contact us for wide array of animations and interactive media"
     />
     <meta
       property="og:image"
@@ -51,10 +51,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@owaiswiz" />
     <meta name="twitter:creator" content="@owaiswiz" />
-    <meta name="twitter:title" content="Free Modern React Templates and Components for Building Landing Pages" />
+    <meta name="twitter:title" content="Innovative Colors Studio" />
     <meta
       name="twitter:description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="Contact us for wide array of animations and interactive media "
     />
     <meta name="twitter:image"
     content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss-twitter.png" />
