Sticky header. Removed clipping on both sides of the page

--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,13 @@
     <title>Innovative Colors Pvt Ltd</title>
     <meta
       name="description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="Contact us for wide array of animations and interactive media"
     />
-    <meta property="og:site_name" content="Treact" />
+    <meta
+          itemprop="image"
+          content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss.png"
+    />
+    <meta property="og:site_name" content="Innovative Colors" />
     <meta property="og:title" content="Innovative Colors Studio" />
     <meta
       property="og:description"
